# api/src/schemas/dtos/graph.py
@@ -1,21 +1,18 @@
 """Graph dtos."""
 
-from typing import Annotated
-
-from pydantic import BaseModel, Field
+from pydantic import BaseModel
 
 
 class CreateLayer(BaseModel):
     """CreateLayer."""
 
     name: str
-    order: Annotated[int, Field(gt=0)]
 
 
 class CreateNode(BaseModel):
     """CreateNode."""
 
     layer_id: int
-    parent_node_id: int
+    parent_node_id: int | None
     name: str
     color: str
